# Hantek6022API

./: .gitignore  .gitmodules  60-hantek6022api.rules  CHANGELOG  LICENSE  MANIFEST.in  MK_FW_VERSION.sh  Makefile  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: build_check.yml
Firmware/: dso602x_fw_version.h
Firmware/DSO6022BE/: scope6022.inc
Firmware/fx2lib/: .gitignore  appveyor.yml
Firmware/fx2lib/include/: fx2regs.h
Firmware/fx2lib/lib/: serial.c
PyHT6022/: LibUsbScope.py
PyHT6022/Firmware/: __init__.py
docs/: README.md  index.md
docs/DIY_6021/: DIY_6021.md
examples/: PyHT6022  README.md  cal_zero.py  calibrate_6022.py  capture.csv  capture.py  capture_6022.py  continous_read.py  dso6021-firmware.hex  dso6022be-firmware.hex  dso6022bl-firmware.hex  fft_from_capture_6022.py  fft_ft_from_capture_6022.py  firmware.hex  get_calibration.py  get_firmware_version.py  get_serial_number.py  mod_fw_01.ihex  perf_test.py  plot_from_capture_6022.py  read_eeprom.py  read_eeprom.sh  read_eeprom_256_byte.py  read_eeprom_256_byte.sh  read_firmware.py  realtime_qt.py  realtime_qt_complex.py  record_wav.py  reset_eeprom_6021.py  reset_eeprom_6022.py  reset_eeprom_id.py  scopevis.py  set_cal_out_freq_6022.py  stock_fw.ihex  upload_6021_firmware.py  upload_6021_firmware_from_hex.py  upload_6022BL_firmware_to_6022BE.py  upload_6022_firmware.py  upload_6022_firmware_from_hex.py  upload_default_firmware.py  (+7 more)
sdcc_debian_old/: sdcc_3.5.0.tgz  sdcc_3.8.0.tgz
src/Hantek6022B/: __init__.py
tests/: __init__.py
(+22 files in other folders)
