[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "Hantek6022B"
description = "Python driver for Hantek6022BE."
authors = [
    {name = "Robert Cope"},
    {name = "Jochen Hoenicke"},
    {name = "Ho-Ro"},
]
dependencies = [
    "libusb1 ~= 3.1",
    "matplotlib ~= 3.9",
    "numpy ~= 1.26",
]
dynamic = ["version"]

[tool.setuptools_scm]
